--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,9 @@
 .App {
   text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
 }
-
 .App-header {
-  background-color: #222;
+  background-color: #1d1d1d;
   height: 150px;
   padding: 20px;
   color: white;
@@ -20,9 +15,4 @@
 
 .App-intro {
   font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
