--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,21 @@
 .App {
   text-align: center;
-
 }
 .App-header {
-  background-color: #1d1d1d;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 1.3em;
+  color:#1d1d1d;
 }
 
 .App-intro {
   font-size: large;
+}
+
+.App-Louco{
+  margin-top: 100px;
 }
