--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Gugi', cursive;
+  background-color: #fefefe;
+}
+
+h1 {
+  font-family: 'Rubik', sans-serif;
+}
+p {
+  color:#bbb;
+}
+
+img{
+  border-radius: 50%;
 }
