--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,18 @@ p {
 }
 
 .text_box{
-  margin-left: 60px;
-  margin-top: 36px;
+  margin-left: 54px;
+  margin-top: 0px;
   font-size: 16px;
-  width:300px;
+  width:400px;
+  color:#bbb;
+  text-align: left;
+  line-height: 40px;
+}
+
+.title{
+  font-size:18px;
+  text-align:left;
+  margin-top: 120px;
+  margin-left: 54px;
 }
