--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,25 @@ body {
   padding: 0;
   font-family: 'Gugi', cursive;
   background-color: #fefefe;
+  width: 100%;
+  display: block;
 }
 
 h1,h2,h3,h4 {
   font-family: 'Rubik', sans-serif;
   color:#1d1d1d;
+}
+
+h1{
+  font-weight: 500;
+}
+
+h2{
+  font-weight: 400;
+}
+
+h3{
+  font-weight: 300;
 }
 
 p {
@@ -24,10 +38,27 @@ p {
   margin: auto;
 }
 
+@media only screen and (max-width: 500px) {
+    .skill_set {
+        width: 100%;
+        margin: 0px !important;
+        margin-left: 2px !important;
+        max-width: 400px !important;
+    }
+    .title{
+      padding-top: 150px !important;
+      margin-top: 0px !important;
+    }
+    .skill_box:first-child{
+      margin-top: -50px !important;
+    }
+
+}
+
 .skill_box{
   display:flex;
   justify-content:space-between;
-  margin-top:200px;
+  margin-top:100px;
 }
 
 .skill_box:first-child{
@@ -35,17 +66,17 @@ p {
 }
 
 .footer{
-  margin-top: 200px;
+  margin-top: 100px;
   text-align: left;
   margin-left: 200px;
 }
 
 .text_box{
-  margin-left: 54px;
-  margin-top: 0px;
+  display: block;
+  padding-left: 10%;
   font-size: 16px;
-  width:400px;
-  color:#bbb;
+  width:95%;
+  color:#666;
   text-align: left;
   line-height: 40px;
 }
@@ -53,6 +84,11 @@ p {
 .title{
   font-size:18px;
   text-align:left;
+  padding-left: 10%;
   margin-top: 120px;
-  margin-left: 54px;
+
+}
+
+form{
+  width:500px;
 }
