--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,10 @@ a{
       margin-top: 60px !important;
     }
 
+    .self-photo{
+      width: 150px !important;
+      height: 150px !important;
+    }
     img{
       width: 80px !important;
       height: 75px !important;
