--- a/src/index.css
+++ b/src/index.css
@@ -1,133 +1,134 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Gugi', cursive;
+  font-family: "Gugi", cursive;
   background-color: #fefefe;
 }
 
-h1,h2,h3,h4,input, textarea {
-  font-family: 'Rubik', sans-serif;
-  color:#1d1d1d;
+h1,
+h2,
+h3,
+h4,
+input,
+textarea {
+  font-family: "Rubik", sans-serif;
+  color: #1d1d1d;
 }
 
-h1{
+h1 {
   font-weight: 500;
 }
 
-h2{
+h2 {
   font-weight: 400;
 }
 
-h3{
+h3 {
   font-weight: 300;
 }
 
 p {
-  color:#bbb;
+  color: #bbb;
 }
 
-a{
+a {
   text-decoration: none;
-  color:#5694f1;
+  color: #5694f1;
   font-weight: 500;
 }
 
-.self-photo{
+.self-photo {
   border-radius: 50%;
 }
 
-.skill_set{
+.skill_set {
   margin-top: 100px;
   width: 40%;
   margin: auto;
 }
 
 @media only screen and (max-width: 500px) {
-    .skill_set {
-        width: 97% !important;
-        margin-left: 10px !important;
-        max-width: 97% !important;
-        margin-right: 0px !important
-    }
-    .text_box{
-      padding-left: 0px !important;
-      text-align: center !important;
+  .skill_set {
+    width: 97% !important;
+    margin-left: 10px !important;
+    max-width: 97% !important;
+    margin-right: 0px !important;
+  }
+  .text_box {
+    padding-left: 0px !important;
+    text-align: center !important;
+  }
+  .title {
+    padding-top: 20px !important;
+    margin-top: 0px !important;
+    text-align: center !important;
+    padding-left: 0px !important;
+  }
+  .skill_box {
+    margin-top: 80px !important;
+    display: block !important;
+  }
+  .skill_box:first-child {
+    margin-top: 60px !important;
+  }
 
-    }
-    .title{
-      padding-top: 20px !important;
-      margin-top: 0px !important;
-      text-align: center !important;
-      padding-left: 0px !important;
-    }
-    .skill_box{
-      margin-top: 80px !important;
-      display:block !important;
-    }
-    .skill_box:first-child{
-      margin-top: 60px !important;
-    }
+  .self-photo {
+    width: 150px !important;
+    height: 150px !important;
+  }
+  img {
+    width: 80px !important;
+    height: 75px !important;
+  }
 
-    .self-photo{
-      width: 150px !important;
-      height: 150px !important;
-    }
-    img{
-      width: 80px !important;
-      height: 75px !important;
-    }
-
-    input{
-      width: 30px;
-    }
+  input {
+    width: 30px;
+  }
 }
 
-.skill_box{
-  display:flex;
-  justify-content:space-between;
-  margin-top:100px;
+.skill_box {
+  display: flex;
+
+  margin-top: 100px;
 }
 
-.skill_box:first-child{
-  margin-top:30px;
+.skill_box:first-child {
+  margin-top: 30px;
 }
 
-.footer{
+.footer {
   margin-top: 100px;
   text-align: center;
   width: 100%;
-
 }
 
-.text_box{
-  display: block;
+.text_box {
   padding-left: 10%;
   font-size: 16px;
-  width:95%;
-  color:#666;
+  width: 95%;
+  color: #666;
   text-align: left;
   line-height: 40px;
 }
 
-.title{
-  font-size:18px;
-  text-align:left;
+.title {
+  font-size: 18px;
+  text-align: left;
   padding-left: 10%;
   margin-top: 120px;
-
 }
 
-.form_louco{
-    display: flex;
-    justify-content: center !important;
-    padding-top: 40px;
+.form_louco {
+  display: flex;
+  justify-content: center !important;
+  padding-top: 40px;
 }
 
-.form_class{
-    padding-top: 10px;
+.form_class {
+  padding-top: 10px;
 }
 
-input{
+input {
   width: 300px;
   border: none;
   border-bottom: 1px solid;
@@ -135,24 +136,22 @@ input{
   vertical-align: top;
 }
 
-textarea{
-    padding-top: 10px;
-    height: 80px;
-    width: 300px;
-    border: none;
-    border-bottom: 1px solid;
-    word-wrap: break-word !important;
-    vertical-align: top;
-
+textarea {
+  padding-top: 10px;
+  height: 80px;
+  width: 300px;
+  border: none;
+  border-bottom: 1px solid;
+  word-wrap: break-word !important;
+  vertical-align: top;
 }
 
-.btn-submit{
+.btn-submit {
   color: #1d1d1d;
   background-color: #bbb;
-  border-radius:12px;
+  border-radius: 12px;
   border: none;
   width: 100px;
   margin-top: 20px;
   height: 40px;
-
 }
