--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,12 @@
 .social-btns .btn.google .fa {
   color: #dc4a38;
 }
+.social-btns .btn.github .fa {
+  color: #1d1d1d;
+}
+.social-btns .btn.github:before {
+  background-color: #1d1d1d;
+}
 .social-btns .btn.dribbble:before {
   background-color: #f26798;
 }
